# toy2debug

./: .clang-format  CMakeLists.txt  README.md  build.py
src/: Hook.hpp  Injector.cpp  Injector.hpp  InjectorUtils.hpp  Main.cpp  Mapper.cpp  Mapper.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  ToyTypes.hpp  ToyTypesDX9.hpp  Utils.hpp
src/Hooks/: CommonHooks.hpp  GameVariables.hpp  RendererCommon.hpp  WindowHooks.cpp  WindowHooks.hpp
src/Hooks/DX3/: DeviceHooks.cpp
src/Hooks/DX6/: DeviceHooks.cpp  DeviceHooks.hpp
src/Hooks/DX9/: DeviceHooks.cpp  DrawHooks.cpp  GlueHooks.cpp  GlueHooks.hpp  LightsHooks.cpp  LightsHooks.hpp  PipelineHooks.cpp  PipelineHooks.hpp  StubHooks.hpp  TexMatHooks.cpp  TexMatHooks.hpp  VBHooks.cpp
src/Loader/: Injector.cpp  InjectorUtils.hpp  Main.cpp  Mapper.cpp  Mapper.hpp  Renderer.cpp  Renderer.hpp
src/Loader/Tabs/: Tab.hpp
src/RenderAPI/: DirectX3.cpp  DirectX3.hpp  DirectX6.cpp  DirectX6.hpp  DirectX9.cpp  DirectX9.hpp
src/Tabs/: DebugTab.cpp  DebugTab.hpp  MainTab.cpp  MainTab.hpp  Tab.hpp
src/ToyDebug/: Hook.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  RendererTypes.hpp  ToyTypes.hpp  Utils.hpp
src/ToyDebug/Renderer/: Renderer.cpp  Renderer.hpp  RendererCommon.hpp
src/ToyDebug/Renderer/Hooks/: DeviceHooks.cpp  DeviceHooks.hpp  DrawHooks.cpp  DrawHooks.hpp  GlueHooks.cpp  GlueHooks.hpp  LightsHooks.cpp  LightsHooks.hpp  MiscHooks.cpp  MiscHooks.hpp  PipelineHooks.cpp  PipelineHooks.hpp  StubHooks.hpp  TexMatHooks.cpp  TexMatHooks.hpp  VBHooks.cpp  VBHooks.hpp
